--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
     </div>
 
 
+    <footer>
+      <div class="foot-col-1 text-white mt-2">
+        <div><img src="images/logo.png" alt=""></div>
+        <div><h5>About Us</h5>
+         <div><a class="aboutus text-white" href="#">Our Heritage</a></div>
+         <div><a class="aboutus text-white" href="#">Our Company</a></div>
+         <div><a class="aboutus text-white" href="#">Coffehouse</a></div>
+        </div>
+
+      </div>
+      
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
