--- a/index.html
+++ b/index.html
@@ -70,19 +70,35 @@
       </div>
       <div class="col-12 d-flex justify-content-evenly flex-wrap">
         <div class="text-center"><img class="rounded-circle" src="images/Bestseller(1).jpg" width="100px" height="100px" alt="image">
-        <p>Bestseller</p></div>
+        <p class="pt-2">Bestseller</p></div>
+
         <div class="text-center"><img class="rounded-circle" src="images/Drinks(2).jpg" width="100px" height="100px"  alt="image">
-        <p>Drinks</p></div>
+        <p class="pt-2">Drinks</p></div>
+
         <div class="text-center"><img class="rounded-circle" src="images/Food(3).jpg" width="100px" height="100px"  alt="image">
-        <p>Foods</p></div>
+        <p class="pt-2">Foods</p></div>
+
         <div><img class="rounded-circle" src="images/Merchandise(4).jpg" width="100px" height="100px"  alt="image">
-        <p>Merchandise</p></div>
+        <p class="pt-2">Merchandise</p></div>
+
         <div class="text-center"><img class="rounded-circle" src="images/CoffeeAtHome(5).jpg" width="100px" height="100px"  alt="image">
-        <p>Coffee At Home</p></div>
+        <p class="pt-2">Coffee At Home</p></div>
+
         <div class="text-center"><img class="rounded-circle" src="images/ReadyToEat(6).jpg" width="100px" height="100px"  alt="image">
-        <p>Ready to Eat</p></div>
+        <p class="pt-2">Ready to Eat</p></div>
+
       </div>
       
+    </div>
+
+    <div class="row mt-5 pt-4" style="background-color:rgb(237,235,233);height: 30vh;">
+      <div class="col-4 d-flex justify-content-evenly">
+        <div><h4>Barista Recommends</h4></div>
+        
+      </div>
+      <div class="col-7 text-end ">
+        <div><a class="view-menu-link" href="#">View Menu</a></div>
+      </div>
     </div>
 
    
