--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       
     </div>
 
-    <div class="row mt-5 pt-4" style="background-color:rgb(237,235,233);height: 30vh;">
+    <div class="row mt-5 pt-4" style="background-color:rgb(237,235,233);">
       <div class="col-4 d-flex justify-content-evenly">
         <div><h4>Barista Recommends</h4></div>
         
@@ -99,8 +99,27 @@
       <div class="col-7 text-end ">
         <div><a class="view-menu-link" href="#">View Menu</a></div>
       </div>
-    </div>
+          <!-- Cards -->
 
+      <div class="row">
+        <div class="col-12">
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="..." class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+       </div>
+    </div>
    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
