--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
           <!-- Cards -->
 
           <div class="row">
-            <div class="col-12">
-              <div class="card mb-3" style="max-width: 540px;">
+            <div class="col-10 d-flex bg-primary justify-content-evenly">
+              <div class="card mb-3" style="">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="images/Bestseller(1).jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="images/Bestseller(1).jpg" class="img-fluid rounded-start" alt="image">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
