remove bottom scrollbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="Css/style.css" />
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
     <!-- Navbar Section  -->
     <nav class="navbar navbar-expand-lg bg-body-white">
       <div class="container-fluid">
