--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="Css/style.css" />
   </head>
-  <body style="overflow-x: hidden;">
+  <body style="overflow-x: hidden">
     <!-- Navbar Section  -->
     <nav class="navbar navbar-expand-lg bg-body-white">
       <div class="container-fluid">
@@ -186,9 +186,11 @@
             </div>
           </div>
 
-          <div class="card-bottom d-flex mt-3 ">
-            <div class="card-price"><h4>₹ 351</h4></div>
-            <div class="card-add-item"><button class="text-white">Add Item</button></div>
+          <div class="card-bottom d-flex mt-1">
+            <div class="card-price"><h6>₹ 351</h6></div>
+            <div class="card-add-item">
+              <button class="text-white">Add Item</button>
+            </div>
           </div>
         </div>
 
@@ -200,14 +202,16 @@
             </div>
             <div class="card-about">
               <div><img src="images/veg.svg" alt="veg-symbol" /></div>
-              <div class="card-title"><h3>Java Chip Frappuccino</h3></div>
+              <div class="card-title"><h3>Cold coffee</h3></div>
               <div class="card-subtitle"><span> TALL(354 ML) </span></div>
             </div>
           </div>
 
-          <div class="card-bottom d-flex mt-3 ">
-            <div class="card-price"><h4>₹ 351</h4></div>
-            <div class="card-add-item"><button class="text-white">Add Item</button></div>
+          <div class="card-bottom d-flex mt-1">
+            <div class="card-price"><h6>₹ 351</h6></div>
+            <div class="card-add-item">
+              <button class="text-white">Add Item</button>
+            </div>
           </div>
         </div>
 
@@ -219,14 +223,18 @@
             </div>
             <div class="card-about">
               <div><img src="images/veg.svg" alt="veg-symbol" /></div>
-              <div class="card-title"><h3>Java Chip Frappuccino</h3></div>
+              <div class="card-title">
+                <h3>Vanilla Sweet Cream Cold Brew</h3>
+              </div>
               <div class="card-subtitle"><span> TALL(354 ML) </span></div>
             </div>
           </div>
 
-          <div class="card-bottom d-flex mt-3 ">
-            <div class="card-price"><h4>₹ 351</h4></div>
-            <div class="card-add-item"><button class="text-white">Add Item</button></div>
+          <div class="card-bottom d-flex mt-1">
+            <div class="card-price"><h6>₹ 383</h6></div>
+            <div class="card-add-item">
+              <button class="text-white">Add Item</button>
+            </div>
           </div>
         </div>
 
