--- a/index.html
+++ b/index.html
@@ -245,41 +245,165 @@
     </div>
 
     <!-- Carousel -->
-    <div class="row">
-      <div class="col-12">
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
-            </div>
+    <section class="favourites-section dashboard-banner ng-star-inserted">
+      <!---->
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-8 favourites-section-label">
+            <h2 class="m-0 animate__animated animate__fadeIn ng-star-inserted">
+              <!----><!----><!----><!---->
+            </h2>
+            <!---->
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <!----><!----><!---->
         </div>
+        <div class="row">
+          <div class="col sm-pr-none no-padding ng-star-inserted">
+            <swiper
+              class="swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-autoheight swiper-backface-hidden"
+              ><div
+                class="swiper-button-prev swiper-button-disabled ng-star-inserted"
+              ></div>
+              <div class="swiper-button-next ng-star-inserted"></div>
+              <!----><!----><!---->
+              <div
+                class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal ng-star-inserted"
+              >
+                <span
+                  class="swiper-pagination-progressbar-fill"
+                  style="
+                    transform: translate3d(0px, 0px, 0px) scaleX(0.5) scaleY(1);
+                    transition-duration: 300ms;
+                  "
+                ></span>
+              </div>
+              <!---->
+              <div
+                class="swiper-wrapper"
+                style="height: 220px; transform: translate3d(0px, 0px, 0px)"
+              >
+                <!----><!---->
+                <div
+                  data-swiper-slide-index="0"
+                  class="swiper-slide ng-star-inserted swiper-slide-active"
+                  style="width: 1100px; margin-right: 50px"
+                >
+                  <!----><!----><!----><!----><!---->
+                  <div class="promotion-banner ng-star-inserted">
+                    <div
+                      class="card card-content"
+                      style="
+                        background-image: url('https://preprodtsbstorage.blob.core.windows.net/cms/uploads/Rectangle_757_6e29d92bcf.png');
+                      "
+                    >
+                      <div class="left-img col-2">
+                        <img
+                          alt="coffe-mug"
+                          rel="preload"
+                          src="https://preprodtsbstorage.blob.core.windows.net/cms/uploads/Tribute_Blend_035288e3ca.png"
+                        />
+                      </div>
+                      <div class="detail col-8 row text-color-light">
+                        <p class="card-title text-color-light">Presenting</p>
+                        <p class="card-head text-color-light">
+                          Tribute Blend Wholebean
+                        </p>
+                        <p class="card-title text-color-light">
+                          Medium roast blend of coffee from four regions. Enjoy
+                          the notes of black berry and baking spices with every
+                          sip.
+                        </p>
+                        <div
+                          class="bottom-content-subscription ng-star-inserted"
+                        >
+                          <button
+                            type="button"
+                            class="custom-btn btn-md-rounded subscribe-btn btn-color-light"
+                          >
+                            Order Now
+                          </button>
+                        </div>
+                        <!----><!---->
+                        <div class="price-text">
+                          <p class="price-title mb-0">For</p>
+                          <p class="price">
+                            ₹ 1400<span class="round-figure">.00</span>
+                          </p>
+                        </div>
+                      </div>
+                      <div class="right-img col-2">
+                        <span class="highlight-text text-color-light"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <!----><!----><!----><!----><!----><!---->
+                </div>
+                <div
+                  data-swiper-slide-index="1"
+                  class="swiper-slide ng-star-inserted swiper-slide-next"
+                  style="width: 1100px; margin-right: 50px"
+                >
+                  <!----><!----><!----><!----><!---->
+                  <div class="promotion-banner ng-star-inserted">
+                    <div
+                      class="card card-content"
+                      style="
+                        background-image: url('https://preprodtsbstorage.blob.core.windows.net/cms/uploads/Group_1056_2_91726ff5e5.png');
+                      "
+                    >
+                      <div class="left-img col-2">
+                        <img
+                          alt="coffe-mug"
+                          rel="preload"
+                          src="https://preprodtsbstorage.blob.core.windows.net/cms/uploads/Image_51_18d7946dc4.png"
+                        />
+                      </div>
+                      <div class="detail col-8 row text-color-light">
+                        <p class="card-title text-color-light">
+                          Sip On Your Favourites With
+                        </p>
+                        <p class="card-head text-color-light">
+                          Starbucks Essentials
+                        </p>
+                        <p class="card-title text-color-light">
+                          Grab your favourite from our stunning range of mugs,
+                          tumblers, cups and spread Starbucks love.
+                        </p>
+                        <div
+                          class="bottom-content-subscription ng-star-inserted"
+                        >
+                          <button
+                            type="button"
+                            class="custom-btn btn-md-rounded subscribe-btn btn-color-light"
+                          >
+                            Order Now
+                          </button>
+                        </div>
+                        <!----><!---->
+                        <div class="price-text">
+                          <p class="price-title mb-0">Starting From</p>
+                          <p class="price">
+                            ₹ 800<span class="round-figure">.00</span>
+                          </p>
+                        </div>
+                      </div>
+                      <div class="right-img col-2">
+                        <span class="highlight-text text-color-light"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <!----><!----><!----><!----><!----><!---->
+                </div>
+                <!----><!----><!----><!---->
+              </div>
+              <!----></swiper
+            >
+          </div>
+          <!---->
+        </div>
+        <!----><!----><!---->
       </div>
-    </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
